@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "auth" {
  class AuthController {
    +register(req: RegisterRequest): void
    +login(req: LoginRequest): TokenResponse
    +user(authHeader: String): UserResponse
    +logout(authHeader: String): void
  }

  class AuthService {
    +register(req: RegisterRequest): void
    +login(req: LoginRequest): TokenResponse
    +getUserFromToken(authHeader: String): UserResponse
    +logout(authHeader: String): void
  }

  class AuthToken {
    -id: UUID
    -userId: UUID
    -createdAt: Instant
    -expiresAt: Instant
    -revoked: boolean
  }

  interface AuthTokenRepository <<repository>> {
    +findByIdAndRevokedFalse(id: UUID): Optional<AuthToken>
  }

  package "dto" {
    class LoginRequest <<record>> {
      +email: String
      +password: String
    }
    class RegisterRequest <<record>> {
      +email: String
      +password: String
    }
    class TokenResponse <<record>> {
      +accessToken: String
    }
    class UserResponse <<record>> {
      +userId: UUID
      +email: String
    }
  }
}

package "users" {
  class User {
    -id: UUID
    -email: String
    -passwordHash: String
    -createdAt: Instant
  }

  interface UserRepository <<repository>> {
    +findByEmail(email: String): Optional<User>
    +existsByEmail(email: String): boolean
  }
}

package "security" {
  class PasswordConfig {
    +passwordEncoder(): PasswordEncoder
  }

  class SecurityConfig {
    +filterChain(http: HttpSecurity): SecurityFilterChain
  }
}

AuthController --> AuthService
AuthService --> UserRepository
AuthService --> AuthTokenRepository
AuthService --> User
AuthService --> AuthToken
@enduml